# AzgardEngine

./: .gitmodules  CMakeLists.txt  Notes.txt
Engine/: CMakeLists.txt  definitions.hpp  utils.hpp
Engine/DataStructures/: Collection.hpp  Identifier.cpp  Identifier.hpp  Model.hpp  Singleton.hpp  Vec3.hpp  Vertice.hpp
Engine/FileFormats/: Base64.cpp  Base64.hpp
Engine/FileFormats/Gltf2/: Parser.cpp  Parser.hpp
Engine/Managers/: DrawManager.cpp  DrawManager.hpp  Engine.cpp  Engine.hpp  EventManager.cpp  EventManager.hpp  FileManager.cpp  FileManager.hpp  JobManager.cpp  JobManager.hpp  LogManager.cpp  LogManager.hpp  MeshManager.cpp  MeshManager.hpp  PlatformManager.cpp  PlatformManager.hpp  RenderManager.cpp  RenderManager.hpp  SceneManager.cpp  SceneManager.hpp  WindowManager.cpp  WindowManager.hpp
Engine/Renderer/: Camera.hpp  Material.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Shader.hpp
Engine/Renderer/Botticelli/: Botticelli.cpp  Botticelli.hpp
Engine/Renderer/Botticelli/OpenGLES3/: BotticelliOpenGLES3.cpp  BotticelliOpenGLES3.hpp  ShaderES3.cpp  ShaderES3.hpp  StaticMeshES3.cpp  StaticMeshES3.hpp
Engine/Renderer/DaVinci/OpenGLES3/: CollectionsES3.cpp  CollectionsES3.hpp  RendererES3.cpp  RendererES3.hpp
Engine/Renderer/DaVinci/OpenGLES3/Camera/: CameraCollectionES3.cpp  CameraCollectionES3.hpp  CameraES3.cpp  CameraES3.hpp
Engine/Renderer/DaVinci/OpenGLES3/Material/: MaterialCollectionES3.cpp  MaterialCollectionES3.hpp  MaterialES3.cpp  MaterialES3.hpp  ShaderES3.cpp  ShaderES3.hpp
Engine/Renderer/DaVinci/OpenGLES3/Mesh/: MeshCollectionES3.cpp  MeshCollectionES3.hpp  MeshES3.cpp  MeshES3.hpp  ModelCollectionES3.cpp  ModelCollectionES3.hpp  ModelES3.cpp  ModelES3.hpp  StaticMeshCollectionES3.cpp  StaticMeshCollectionES3.hpp  StaticMeshES3.cpp  StaticMeshES3.hpp
Engine/Renderer/DaVinci/OpenGLES3/Shader/: ShaderCollectionES3.cpp  ShaderCollectionES3.hpp  ShaderES3.cpp  ShaderES3.hpp
Engine/Renderer/OpenGLES3/: RendererES3.cpp  RendererES3.hpp
Engine/Renderer/OpenGLES3/Camera/: CameraES3.cpp  CameraES3.hpp  CameraManagerES3.cpp  CameraManagerES3.hpp
Engine/Renderer/OpenGLES3/Mesh/: MeshES3.cpp  MeshES3.hpp  MeshManagerES3.cpp  MeshManagerES3.hpp  ModelES3.cpp  ModelES3.hpp  ModelManagerES3.cpp  ModelManagerES3.hpp
Engine/Renderer/OpenGLES3/Shader/: ShaderES3.cpp  ShaderES3.hpp  ShaderManagerES3.cpp  ShaderManagerES3.hpp
Engine/Window/: Window.hpp
Engine/Window/SDL2/: CMakeLists.txt  WindowSDL2.cpp  WindowSDL2.hpp
dependencies/: CMakeLists.txt
dependencies/ScalableVectorTriangulator/: CMakeLists.txt  README.md
dependencies/ScalableVectorTriangulator/include/vec-t/: glyph.h  stroke.h
dependencies/ScalableVectorTriangulator/src/: shape.cpp  triangulation.cpp
dependencies/objwriter/: CMakeLists.txt
dependencies/text_tree/: CMakeLists.txt
dependencies/text_tree/src/: text_tree.cpp  text_tree.h
dependencies/text_tree/src/utils/: print_utils.h
dependencies/text_tree/tests/: CMakeLists.txt  append_tree_left.cpp  append_tree_right.cpp  index.cpp  insert_char_at.cpp  insert_characters_at.cpp  insert_tree_at.cpp  lenght.cpp  remove_character_at.cpp  remove_characters_between.cpp  split_at.cpp  stream_section.cpp  subtree.cpp  to_string.cpp
dependencies/tinygltf/: CMakeLists.txt
dependencies/vec-t/: CMakeLists.txt
dependencies/vec-t/include/vec-t/: bezier.h  color.h  glyph.h  shape.h  svg.h  triangulation.h
dependencies/vec-t/src/: bezier.cpp  glyph.cpp  stroke.cpp  svg.cpp
gles3/: camera.h  font.h  glyph.cpp  mesh.cpp  shader.h  shape.cpp  shape.h  svg.cpp  svg.h  textbox.cpp  textbox.h  window.cpp  window.h  xml-parser.h
nodes/: add.h  less-or-equal.h  multiply.h  utf16.h  utf8.h
nodes/core/: opentype-features.h  utf16.h
obsolete/gles3/: font.cpp  glyph.h  mesh.h  renderer.cpp  renderer.h  shader.cpp  texture.cpp  texture.h
obsolete/nodes/: TODO.txt  char.h  constant.h  different.h  divide.h  equal.h  fraction.h  greater-or-equal.h  greater.h  integral.h  less.h  mathtext.h  pluss-minus.h  power.h  root.h  subtract.h  utf32.h  xml.h
obsolete/nodes/core/: desc.h  square.h  utf32.h  utf8.h
obsolete/nodes/maps/: math-alphabet.h
